src/app/module-viewer/riverside-step-template/template-heading/template-heading.component.sass
\:host
    padding-top: 2vw

.template-title-bar
    position: absolute
    top: 0
    left: 0
    width: 100%
    text-align: center
    background-color: #eee
    color: black
    padding: 0.5vw

    h2
        font-size: 1.7vw
        margin-bottom: 0
        font-family: Montserrat

    .timer-container
        display: flex
        position: absolute
        right: 1vw
        top: 0.7vw

        .timer-control
            display: inline-block
            color: green
            background-color: white
            height: 1.7vw
            width: 1.7vw
            margin-right: 0.5vw
            text-align: center
            border: 1px solid green
            cursor: pointer
            vertical-align: middle
            padding-top: 3px

            mat-icon
                font-size: 1.3vw

        .timer
            vertical-align: middle
            display: inline-block
            font-size: 1vw
            color: green
            background-color: white
            padding: 0.3vw
            line-height: 1em
            border: 1px solid green
            width: 5vw
            text-align: center
            font-family: Montserrat

.heading-content-wrapper
    max-width: 800px
    margin: 0 auto
    color: #868686

.template-resource
    text-align: center

.template-description, .template-instructions
  font-size: x-large

